# nrf_project_setup

./: CMakeLists.txt  Kconfig  prj.conf
src/: main.c  modul1.c  modul1.h
